# deepframe

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  app.py
src/core/: __init__.py  frame_processor.py  sbs_generator.py  stereo_reader.py  video_reader.py  video_writer.py
src/models/: __init__.py  base.py  depth_anything.py  dpt.py  midas.py  model_manager.py
src/ui/: __init__.py  main_window.py  model_dialog.py  queue_panel.py  settings_panel.py  styles.qss  video_player.py
src/utils/: __init__.py  config.py  gpu_utils.py
src/workers/: __init__.py  export_worker.py  preview_worker.py
