[project]
name = "deepframe"
version = "0.1.0"
description = "Convert 2D videos to VR-compatible SBS 3D using AI depth estimation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DeepFrame Contributors" }]
keywords = ["vr", "3d", "depth-estimation", "video-conversion", "sbs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
    "PyQt6>=6.5",
    "torch>=2.0",
    "torchvision",
    "opencv-python>=4.8",
    "ffmpeg-python>=0.2",
    "numpy>=1.24",
    "Pillow>=10.0",
    "onnxruntime>=1.16",
    "timm>=1.0.22",
]

[project.optional-dependencies]
cuda = ["onnxruntime-gpu>=1.16"]
dev = ["pytest", "pytest-qt", "ruff", "mypy"]

[project.scripts]
deepframe = "src.app:main"

[project.gui-scripts]
deepframe-gui = "src.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
